fix: out of bounds sidebar when a header banner is visible

--- a/web/app/styles/tailwind.css
+++ b/web/app/styles/tailwind.css
@@ -21,10 +21,12 @@
 
   /* Heights */
   --header-height: 60px;
-  --height-including-header: calc(100vh - var(--header-height));
+  --banner-height: 0px;
+  --header-total-height: calc(var(--header-height) + var(--banner-height));
+  --height-including-header: calc(100vh - var(--header-total-height));
   --min-height-page: calc(100vh - 74px);
   --min-height-min-footer: calc(100vh - 157px);
-  --min-height-including-header: calc(100vh - var(--header-height));
+  --min-height-including-header: calc(100vh - var(--header-total-height));
 
   --default-transition-duration: 200ms;
 }
@@ -258,6 +260,10 @@
   ::backdrop,
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
+  }
+
+  :root:has(.header-banner) {
+    --banner-height: 40px;
   }
 }
 
